@@ -21,8 +21,8 @@
     "GPL-2.0-or-later"
   ],
   "require": {
-    "typo3/cms-core": ">=7.6.0,<=9.5.99",
-    "typo3-ter/div2007": ">=1.10.1"
+    "typo3/cms-core": ">=8.7.0,<=9.5.99",
+    "typo3-ter/div2007": ">=1.10.20"
   },
   "autoload": {
     "psr-4": {
