@@ -21,7 +21,8 @@ $EM_CONF[$_EXTKEY] = [
 		'depends' => 
 		[
 			'php' => '5.6.0-7.3.99',
-            'typo3' => '7.6.0-9.5.99'
+            'typo3' => '8.7.0-9.5.99',
+			'div2007' => '1.10.20-0.0.0',
 		],
 		'conflicts' => 
 		[
